added animation scroll (fullpage.js)

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "HTML5+CSS3 template for easy start website project'",
   "main": "gulpfile.js",
   "dependencies": {
+    "fullpage.js": "^3.0.9",
     "jquery": "^3.4.1",
     "normalize.css": "^8.0.1",
     "slick-carousel": "^1.8.1"
